2014-03-28  Andrew John Hughes  <gnu.andrew@redhat.com>

	* configure.ac: Bump to 2.4.7pre00.
	* NEWS: Add 2.4.7 section.

2014-03-26  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Update with recent changes.

2014-03-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Update release date.

2014-03-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_ENABLE_ARM32JIT): Turn JIT on by default.
	* NEWS: Readd mention of turning JIT on by default.

2012-08-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add -Werror patch
	from IcedTea7 HEAD.
	* patches/hotspot/aarch64/werror.patch:
	Allow COMPILER_WARNINGS_FATAL to turn off -Werror.

2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Updated.
	* hotspot.map: Bring in S8035893 backport.

2014-03-26  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	Perform configure checks using ecj.jar
	if native ecj is enabled.
	* Makefile.am:
	(native-ecj): Link against gcj explicitly.
	* acinclude.m4:
	(IT_FIND_COMPILER): Run IT_WITH_GCJ
	and set JAVAC to an invocation of the ECJ_JAR
	if native ecj is used. Depend on IT_FIND_JAVA
	and IT_FIND_ECJ_JAR for this.
	(IT_FIND_ECJ_JAR): Define only once.
	(IT_WITH_GCJ): Likewise.
	(IT_DIAMOND_CHECK): Depend on IT_CHECK_JAVA_AND_JAVAC_WORK.
	* configure.ac: Remove invocation of IT_WITH_GCJ.

2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* hotspot.map:
	Update to latest aarch64 tree.

2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(EXTRA_DIST): Don't look for patches in
	boot/hotspot/*. Do look for patches in
	hotspot/*.

2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Set release date to today.
	* configure.ac: Set to 2.4.6.

2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_ENABLE_ARM32JIT): Turn JIT off by default.
	* NEWS: Remove mention of turning JIT on by default.
